# mbrot

./: .gitignore  CMakeLists.txt  main.cpp
ext/glad/include/glad/: egl.h  gl.h
ext/glad/src/: gl.c
